// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component renders correctly 1`] = `
<div>
  <div
    class="HidePrint-root-1"
  >
    <div
      class="Footer-root-2"
      data-testid="footer"
    >
      <div
        class="Container-root-14"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root Grid-item-16 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-18 MuiTypography-h4"
                data-testid="typography"
              >
                Get in touch
              </h4>
              <nav>
                <ul
                  class="Footer-list-8"
                >
                  <li
                    class="Footer-listItem-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-text Button-text-27 Button-textDarkBg-31 Footer-link-7 MuiButton-textPrimary"
                      data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"+44 (0) 1234567890\\",\\"action\\":\\"tel:+4401234567890\\"}"
                      href="tel:+4401234567890"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-29"
                      >
                        <span
                          class="MuiButton-startIcon Button-startIcon-30 MuiButton-iconSizeMedium"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                            />
                          </svg>
                        </span>
                        +44 (0) 1234567890
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
            <div
              class="MuiGrid-root Grid-item-16 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-18 MuiTypography-h4"
                data-testid="typography"
              >
                About BMI
              </h4>
              <nav>
                <ul
                  class="Footer-list-8"
                >
                  <li
                    class="Footer-listItem-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-text Button-text-27 Button-textDarkBg-31 Footer-link-7 MuiButton-textPrimary"
                      data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"Our story\\",\\"action\\":\\"/uk/landing-page/\\"}"
                      href="/uk/landing-page/"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-29"
                      >
                        Our story
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="Footer-secondaryNavigation-9"
          >
            <div
              class="Footer-logo-10"
            >
              <svg />
            </div>
            <ul
              class="Footer-list-8 Footer-listInline-11"
            >
              <li
                class="Footer-listItem-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-text Button-text-27 Button-textDarkBg-31 Footer-link-7 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"Our story\\",\\"action\\":\\"/uk/landing-page/\\"}"
                  href="/uk/landing-page/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-29"
                  >
                    Our story
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
              <li
                class="Footer-listItem-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-text Button-text-27 Button-textDarkBg-31 Footer-link-7 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"global.sitemap\\",\\"action\\":\\"/uk/sitemap/\\"}"
                  href="/uk/sitemap/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-29"
                  >
                    global.sitemap
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <div
              class="Footer-standardLogo-12"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component renders without brand logo Icon if it is presented in link 1`] = `
<div>
  <div
    class="HidePrint-root-46"
  >
    <div
      class="Footer-root-47"
      data-testid="footer"
    >
      <div
        class="Container-root-59"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root Grid-item-61 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-63 MuiTypography-h4"
                data-testid="typography"
              >
                Get in touch
              </h4>
              <nav>
                <ul
                  class="Footer-list-53"
                >
                  <li
                    class="Footer-listItem-48"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-text Button-text-72 Button-textDarkBg-76 Footer-link-52 MuiButton-textPrimary"
                      data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"+44 (0) 1234567890\\",\\"action\\":\\"tel:+4401234567890\\"}"
                      href="tel:+4401234567890"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-74"
                      >
                        <span
                          class="MuiButton-startIcon Button-startIcon-75 MuiButton-iconSizeMedium"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                            />
                          </svg>
                        </span>
                        +44 (0) 1234567890
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
            <div
              class="MuiGrid-root Grid-item-61 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-63 MuiTypography-h4"
                data-testid="typography"
              >
                About BMI
              </h4>
              <nav>
                <ul
                  class="Footer-list-53"
                >
                  <li
                    class="Footer-listItem-48"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-text Button-text-72 Button-textDarkBg-76 Footer-link-52 MuiButton-textPrimary"
                      data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"Our story\\",\\"action\\":\\"/uk/landing-page/\\"}"
                      href="/uk/landing-page/"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-74"
                      >
                        Our story
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="Footer-secondaryNavigation-54"
          >
            <div
              class="Footer-logo-55"
            >
              <svg />
            </div>
            <ul
              class="Footer-list-53 Footer-listInline-56"
            >
              <li
                class="Footer-listItem-48"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-text Button-text-72 Button-textDarkBg-76 Footer-link-52 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"Icopal brand\\",\\"action\\":\\"/uk/landing-page/\\"}"
                  href="/uk/landing-page/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-74"
                  >
                    Icopal brand
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
              <li
                class="Footer-listItem-48"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-text Button-text-72 Button-textDarkBg-76 Footer-link-52 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"global.sitemap\\",\\"action\\":\\"/uk/sitemap/\\"}"
                  href="/uk/sitemap/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-74"
                  >
                    global.sitemap
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <div
              class="Footer-standardLogo-57"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
